# BetterSelf-iOS

./: .gitignore  README.md  betterselfApp.swift  demo.xml  fileManager.swift  gymuiApp.swift  model.swift
betterself.xcodeproj/: project.pbxproj
betterself.xcodeproj/project.xcworkspace/xcuserdata/jack.xcuserdatad/: UserInterfaceState.xcuserstate
betterself.xcodeproj/xcuserdata/jack.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
betterself.xcodeproj/xcuserdata/jack.xcuserdatad/xcschemes/: xcschememanagement.plist
betterself_server/: manage.py  pyproject.toml  setup.py
betterself_server/betterself/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
betterself_server/betterself/migrations/: 0001_initial.py  0002_alter_exercise_id_alter_section_id_alter_workout_id.py  0003_alter_exercise_section_alter_section_workout.py
betterself_server/betterself_server/: asgi.py  settings.py  urls.py  wsgi.py
controller/: dataManager.swift  jsonManager.swift
data/: workout.xml
model/: model.swift
view/: loginView.swift  mainView.swift  sectionView.swift  workoutView.swift
views/: ContentView.swift  detailView.swift  editView.swift  loginView.swift  newView.swift  workoutView.swift
