[build-system]
requires = ["setuptools", "wheel"]

[metadata]
name = "betterself"
version = "0.1.0"
description = ""
author = "Your Name"
author_email = "you@example.com"

[options]
python_requires = ">=3.8"
install_requires = [
    "django>=5.0",
    "djangorestframework>=3.15",
    "djangorestframework-xml>=2.0"
]
